--- a/app/src/main/res/layout/activity_detect.xml
+++ b/app/src/main/res/layout/activity_detect.xml
@@ -5,5 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DetectActivity">
-
+<ImageView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/imageView"
+    android:src="@drawable/img"
+    />
 </androidx.constraintlayout.widget.ConstraintLayout>
